--- a/gb/18/9/27/n10745000.md
+++ b/gb/18/9/27/n10745000.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gzptzn309/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/gzptzn309/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/gzptzn309/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gzptzn309/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gzptzn309/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gzptzn309/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gzptzn309/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gzptzn309/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高天韵：川普联大发言 带给中国启示和希望</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/09/9f2a62ddaa8ddee296138420b954b71c-600x400.jpg" />
 <h6>9月25日，川普（特朗普）总统在联合国大会上发表演讲，呼吁各国抵制社会主义。(Bryan R. Smith/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2018年09月27日讯】9月25日，<ahref="https://github.com/gzptzn309/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E6%80%BB%E7%BB%9F.md#1">川普总统</a>再登<ahref="https://github.com/gzptzn309/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%9B%BD%E5%A4%A7%E4%BC%9A.md#1">联合国大会</a>讲台，强调主权、独立、自由和爱国主义，呼吁各国抵制<ahref="https://github.com/gzptzn309/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>。他并且回顾了其上任以来所取得的经济和外交成就，阐明美国在重大问题上的立场。</p>
+	<p>【大纪元2018年09月27日讯】9月25日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E6%80%BB%E7%BB%9F.md#1">川普总统</a>再登<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%81%94%E5%90%88%E5%9B%BD%E5%A4%A7%E4%BC%9A.md#1">联合国大会</a>讲台，强调主权、独立、自由和爱国主义，呼吁各国抵制<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>。他并且回顾了其上任以来所取得的经济和外交成就，阐明美国在重大问题上的立场。</p>
 <p>这一番演讲，弦外有音，尤其对中国具有多重启示，给中国人民带来希望。</p>
-<p>川普说：“在所有<ahref="https://github.com/gzptzn309/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>或<ahref="https://github.com/gzptzn309/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>被实践的地方，它都导致了痛苦、腐败和衰弱。社会主义对权力的渴望导致了扩张、入侵和压迫。世界上所有国家都应该抵制社会主义及其给每个人带来的苦难。”</p>
-<p>这段话让人联想起，在上届联大，川普猛烈抨击<ahref="https://github.com/gzptzn309/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>，它也对应着美国对古巴、朝鲜、中共、委内瑞拉等极权所采取的系列制裁行动与决不妥协的态度。</p>
+<p>川普说：“在所有<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>或<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>被实践的地方，它都导致了痛苦、腐败和衰弱。社会主义对权力的渴望导致了扩张、入侵和压迫。世界上所有国家都应该抵制社会主义及其给每个人带来的苦难。”</p>
+<p>这段话让人联想起，在上届联大，川普猛烈抨击<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>，它也对应着美国对古巴、朝鲜、中共、委内瑞拉等极权所采取的系列制裁行动与决不妥协的态度。</p>
 <p>纵观历史，审视当下，在那些实行社会主义制度、由共产党一党专政的国家里，人民饱受欺凌，被剥夺了自由、权利甚至生命。一亿多生灵的消亡以及至今未停的杀戮和精神毒害，都在向世人发出警讯：抵制社会主义或共产主义，解救受压迫者于水火，消除人间苦难。</p>
 <p>中国大地，在过去的69年里，充斥着饥饿、斗争、屠杀、压迫与恐怖；执政党最大限度地攫取财富，最大限度地扼杀自由——今天，大陆民众仍然无法自由地获取信息、不能自由地表达思想、被禁止自由地追求信仰。敢言者因言获罪，秉持良知者受虐受罚，山河凋零，危机深重。</p>
 <p>那么，抵制社会主义，不正是造福中国人民、助中国开启新篇章的大善之举吗？因此，不难理解，受苦受难的大陆百姓对于中美贸易战，对于美国反中共间谍、严查中共官媒、制裁中共军队和高官都欢呼支持。</p>
@@ -23,7 +23,7 @@
 <p>川普对未来提出建议，“让我们选择一个由爱国心、繁荣和自尊构成的未来。让我们选择和平与自由，而不是统治和击败。而且，让我们聚集于此，代表我们的人民和他们的国家，永远强大，永远独立，永远公平，永远为着神的恩典、仁慈与荣耀而心怀感恩。”</p>
 <p>人民的国家，以自由的姿态拥抱引以自豪的未来。这样的未来，值得向往、期待、拥有，值得为之努力。这样的未来，要如何开创？</p>
 <p>今年6月，在川金会上，川普通过一段视频向金正恩展示了朝鲜的一种未来：摆脱了核战的阴影，美丽的海滩将获得安宁、走向富裕。选择哪条路，请君把握。</p>
-<p>对于习近平，<ahref="https://github.com/gzptzn309/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E6%80%BB%E7%BB%9F.md#1">川普总统</a>曾多次表示好感和敬意，但是，他从不因此软化对中共的举措。微妙的切割之意，在此透出——把习近平与中共分离开来。这是多么大的善意提示！</p>
+<p>对于习近平，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E6%80%BB%E7%BB%9F.md#1">川普总统</a>曾多次表示好感和敬意，但是，他从不因此软化对中共的举措。微妙的切割之意，在此透出——把习近平与中共分离开来。这是多么大的善意提示！</p>
 <p>中国网友为川普演讲点赞：“坚决支持川普总统！希望美国能带领全世界消灭共产主义。”“让中国的人民看到了真正的希望。伟大的川普总统，中国人民爱你！世界人民爱你！”</p>
 <p>各国领导人和代表都在聆听，无论他们心怀何感。毋庸置疑，川普站在了道德和勇气的高点，抗击邪恶，不畏艰险。人民的喝采最真实、最宝贵，献给为正义和未来而战的勇者。#</p>
 <p>责任编辑：高义</p>
@@ -32,42 +32,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/17/9/21/n9654091.md#1">高天韵：震慑与震撼 川普联大发言释深刻信号</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/8/9/n10627720.md#1">担忧社会主义蔓延 川普的支持者力挺总统</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/9/23/n10734898.md#1">高天韵：中共为何看不懂川普</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/9/25/n10741314.md#1">川普联大演讲：世界各国应抵制社会主义</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/9/21/n9654091.md#1">高天韵：震慑与震撼 川普联大发言释深刻信号</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/9/n10627720.md#1">担忧社会主义蔓延 川普的支持者力挺总统</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/9/23/n10734898.md#1">高天韵：中共为何看不懂川普</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/9/25/n10741314.md#1">川普联大演讲：世界各国应抵制社会主义</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/13/n12685017.md#1">回顾腊八粥缘起 乱世中传达什么救人讯息？</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/16/8/1/n8156207.md#1">富者与贫者 谁有资格骄傲？</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/23/n12706720.md#1">【唐青看时事】习近平五军压境 拜登蒙在鼓里？</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/22/n12706399.md#1">【时事纵横】史无前例 美两总统同时遭弹劾</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/21/n12703461.md#1">拜登上任 国务院撤下中国威胁、5G等政策议程</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/21/n12703658.md#1">麦康奈尔：拜登首日就在错误方向迈出几大步</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/21/n12703616.md#1">河南济源市委书记掌掴市府秘书长的深层背景</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/21/n12703721.md#1">撑警陈百祥违反限聚令 5千港人联署促警严查</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/22/n12705064.md#1">法比欧当台湾女婿 示范拿手菜满足未婚妻的胃</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/20/n12701010.md#1">与母亲温馨合照曝光 古天乐孝顺事迹获爆赞</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/20/n12699972.md#1">林心如回忆创业遇撞墙：把鸟事化无事</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/22/n12706385.md#1">章子怡首拍剧穿帮？古装裙下露出精品运动鞋</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/21/n12702172.md#1">为什么在冬天开车不应该先暖车？</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/20/n12700875.md#1">如何区分新冠肺炎、慢性咳嗽、过敏？2招判断</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/22/n12704952.md#1">2021年1月21日很特殊 百年一遇</a></li>
-<li><a href="https://github.com/gzptzn309/djy/blob/master/gb/21/1/22/n12704480.md#1">大批人感染后 病毒就会消失？群体免疫3大疑虑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gzptzn309/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gzptzn309/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/27/n10745000.htm">高天韵：川普联大发言 带给中国启示和希望</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/27/n10745000.htm">高天韵：川普联大发言 带给中国启示和希望</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gzptzn309/djy/blob/master/gb/18/9/27/n10745000.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gzptzn309/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gzptzn309/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gzptzn309/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gzptzn309/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gzptzn309/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/9/27/n10745000.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
